Fix styling and spacing of top navbar

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -82,37 +82,6 @@
     margin-right: 131px;
 } */
 
-#contact {
-    position: relative;
-    width: 139px;
-    z-index: 10;
-    text-align: left;
-    color: rgb(37, 72, 137);
-    font-family: HelveticaNeue;
-    font-size: 30px;
-    float: right;
-    display: inline-block;
-    margin-top: 89px;
-    margin-right: -539px;
-    height: 36px;
-}
-
-
-#buy {
-    position: relative;
-    width: 62px;
-    z-index: 10;
-    text-align: left;
-    color: rgb(37, 68, 137);
-    font-family: HelveticaNeue;
-    font-size: 30px;
-    display: inline-block;
-    margin-left: 185px;
-    left: 92px;
-    height: 36px;
-}
-
-
 
 #cover-001 {
     position: absolute;
@@ -174,7 +143,7 @@ section {
 }
 
 #most-powerful-section {
-    z-index: 70;
+    z-index: 90;
     position: relative;
     display: inline-block;
     text-align: center;
