--- a/src/styles/NavBottom.css
+++ b/src/styles/NavBottom.css
@@ -2,7 +2,7 @@
     font-family: HelveticaNeue;
     font-size: 30px;
     line-height: 1;
-    color: rgb(37, 68, 137);
+    color: #254489;
     text-align: left;
     direction: rtl;
     z-index: 20;
@@ -12,7 +12,7 @@
     font-family: HelveticaNeue;
     font-size: 30px;
     line-height: 1;
-    color: rgb(36, 72, 137);
+    color: #254489;
     text-align: left;
     direction: rtl;
     z-index: 10;
@@ -23,7 +23,7 @@
     width: 129px;
     z-index: 50;
     text-align: left;
-    color: rgb(37, 68, 137);
+    color: #254489;
     font-family: HelveticaNeue;
     font-size: 30px;
     direction: rtl;
@@ -39,7 +39,7 @@
     width: 102px;
     z-index: 40;
     text-align: left;
-    color: rgb(37, 68, 137);
+    color: #254489;
     font-family: HelveticaNeue;
     font-size: 30px;
     float: left;
@@ -54,7 +54,7 @@
     width: 139px;
     z-index: 10;
     text-align: left;
-    color: rgb(37, 72, 137);
+    color: #254489;
     font-family: HelveticaNeue;
     font-size: 30px;
     float: right;
